# r4motor_firmware

./: AGENTS.md  Cargo.toml  README.md  memory.x
.cargo/: config.toml
.devcontainer/: Dockerfile  check-remote.sh  devcontainer.json
.github/workflows/: build.yml
src/: car_ctrl.rs  device.rs  main.rs  motor.rs  pid.rs  registry.rs  spi_proto.rs
